expand master row part2

--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -130,7 +130,11 @@
                             </Button>
                         </dxlc:LayoutGroup>
                     </dxlc:LayoutGroup>
-                    <local:ProjectsView/>
+                    <local:ProjectsView x:Name="mainProject">
+                        <dxmvvm:Interaction.Behaviors>
+                            <local:GridControlManagerService/>
+                        </dxmvvm:Interaction.Behaviors>
+                    </local:ProjectsView>
                 </dxlc:LayoutGroup>
             </dx:DXTabItem>
             <dx:DXTabItem Header="AllProjects">
