--- a/ListOfDeal/Views/ProjectsView.xaml
+++ b/ListOfDeal/Views/ProjectsView.xaml
@@ -25,7 +25,7 @@
         </dxmvvm:Interaction.Behaviors>
         <dxg:GridControl.Columns>
             <dxg:GridColumn FieldName="Name" Width="490"/>
-            <dxg:GridColumn FieldName="DateCreated" SortIndex="1" SortOrder="Ascending" ReadOnly="True"/>
+            <dxg:GridColumn FieldName="DateCreated" SortIndex="1" SortOrder="Ascending" AllowEditing="False"/>
             <dxg:GridColumn FieldName="TypeId" GroupIndex="0">
                 <dxg:GridColumn.EditSettings>
                     <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name" />
@@ -67,7 +67,7 @@
                                 <dxe:ComboBoxEditSettings  ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
                             </dxg:GridColumn.EditSettings>
                         </dxg:GridColumn>
-                        <dxg:GridColumn FieldName="DateCreated" ReadOnly="True" SortIndex="1" SortOrder="Ascending"/>
+                        <dxg:GridColumn FieldName="DateCreated" AllowEditing="False" SortIndex="1" SortOrder="Ascending" />
                         <dxg:GridColumn FieldName="ScheduledTime">
                             <dxg:GridColumn.CellTemplate>
                                 <DataTemplate>
