--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+                xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:local="clr-namespace:ListOfDeal"
         Title="MainWindow" Height="700" Width="1200"
@@ -323,9 +324,64 @@
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition/>
-                        <RowDefinition/>
+                        <RowDefinition Height="9*"/>
                     </Grid.RowDefinitions>
                     <Button Content="Get data chart" Command="{Binding GetChartDataCommand}"/>
+                    <dxc:ChartControl Grid.Row="1" >
+                        <dxc:ChartControl.CrosshairOptions>
+                            <dxc:CrosshairOptions GroupHeaderPattern="{}{A:MMM yy}"/>
+                        </dxc:ChartControl.CrosshairOptions>
+                        <dxc:XYDiagram2D  EnableAxisYNavigation="True" EnableAxisXNavigation="True" >
+                            <dxc:XYDiagram2D.SecondaryAxesY>
+                                <dxc:SecondaryAxisY2D Name="secondaryAxisY"  />
+                            </dxc:XYDiagram2D.SecondaryAxesY>
+                            <dxc:LineSeries2D  ValueDataMember="Summary"
+                                       ArgumentDataMember="TDate"
+                                       DisplayName="Sum"
+                                       DataSource="{Binding AllDayData}"
+                                       >
+                            </dxc:LineSeries2D>
+
+                            <dxc:BarSideBySideSeries2D Name="series1"
+                                                            dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
+                                                          ValueDataMember="CountIn"
+                                       ArgumentDataMember="TDate"
+                                       DisplayName="In"
+                                       DataSource="{Binding AllDayData}"
+                                                       >
+                                <dxc:BarSideBySideSeries2D.Label>
+                                    <dxc:SeriesLabel ResolveOverlappingMode="Default"
+                                               
+                                                     TextPattern="{}{V:F2}"/>
+                                </dxc:BarSideBySideSeries2D.Label>
+
+                            </dxc:BarSideBySideSeries2D>
+                            <dxc:BarSideBySideSeries2D Name="series2"
+                                                            dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
+                                                          ValueDataMember="CountOut"
+                                       ArgumentDataMember="TDate"
+                                       DisplayName="In"
+                                       DataSource="{Binding AllDayData}"
+                                                       LabelsVisibility="True"
+                                                       >
+                                <dxc:BarSideBySideSeries2D.Label>
+                                    <dxc:SeriesLabel ResolveOverlappingMode="Default"
+                                                     Visibility="Visible"
+                                                     TextPattern="{}{V:F2}"/>
+                                </dxc:BarSideBySideSeries2D.Label>
+
+                            </dxc:BarSideBySideSeries2D>
+                            <!--<dxc:LineSeries2D  ValueDataMember="SumAll"
+                                       DisplayName="All"
+                                       ArgumentDataMember="DayDate" 
+                              dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
+                                       DataSource="{Binding DateChartCollection}">
+                            </dxc:LineSeries2D>-->
+                        </dxc:XYDiagram2D>
+                        <dxc:ChartControl.Legend>
+                            <dxc:Legend/>
+                        </dxc:ChartControl.Legend>
+                    </dxc:ChartControl>
                 </Grid>
             </dx:DXTabItem>
         </dx:DXTabControl>
