--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -11,7 +11,8 @@
          xmlns:local="clr-namespace:ListOfDeal"
         Title="MainWindow" Height="700" Width="1200"
              WindowState="Maximized"
-             SnapsToDevicePixels="True" UseLayoutRounding="True"
+             SnapsToDevicePixels="True" UseLayoutRounding="True" Icon="Resources/done_eM5_1.ico"
+             
              >
     <Window.Resources>
         <dxmvvm:ObjectToBooleanConverter x:Key="objToBoolConverter"/>
