--- a/ListOfDeal/Views/Actions/DelegatedActionsView.xaml
+++ b/ListOfDeal/Views/Actions/DelegatedActionsView.xaml
@@ -9,13 +9,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <dxg:GridControl Grid.Row="1" Tag="DelegatedActionsGrid" x:Name="InnerGrid"
-                                     ItemsSource="{Binding ActiveActions}"
+    <dxg:GridControl Grid.Row="1" x:Name="InnerGrid"
+                                  ItemsSource="{Binding DelegatedActions}"
                                   AutoExpandAllGroups="True"
                                      >
-        <dxmvvm:Interaction.Behaviors>
-            <dxmvvm:EventToCommand EventName="CustomRowFilter" PassEventArgsToCommand="True" Command="{Binding CustomRowFilterCommand}"/>
-        </dxmvvm:Interaction.Behaviors>
         <dxg:GridControl.Columns>
             <dxg:GridColumn FieldName="Name"/>
 
