--- a/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
+++ b/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
@@ -9,13 +9,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <dxg:GridControl Grid.Row="1" Tag="ScheduledActionsGrid"
-                                     ItemsSource="{Binding ActiveActions}" x:Name="InnerGrid"
+    <dxg:GridControl Grid.Row="1" ItemsSource="{Binding ScheduledActions}" x:Name="InnerGrid"
                                   AutoExpandAllGroups="True"
                                      >
-        <dxmvvm:Interaction.Behaviors>
-            <dxmvvm:EventToCommand EventName="CustomRowFilter" PassEventArgsToCommand="True" Command="{Binding CustomRowFilterCommand}"/>
-        </dxmvvm:Interaction.Behaviors>
         <dxg:GridControl.Columns>
             <dxg:GridColumn FieldName="Name"/>
 
