--- a/ListOfDeal/Views/Actions/DelegatedActionsView.xaml
+++ b/ListOfDeal/Views/Actions/DelegatedActionsView.xaml
@@ -6,6 +6,7 @@
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -56,6 +57,11 @@
         </dxg:GridControl.Columns>
         <dxg:GridControl.View>
             <dxg:TableView>
+                <dxg:TableView.FormatConditions>
+                    <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
+                        <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                    </dxg:FormatCondition>
+                </dxg:TableView.FormatConditions>
                 <dxg:TableView.RowCellMenuCustomizations>
                     <dxb:BarButtonItem Content="Go to project"
                                                        Command="{Binding View.DataContext.GoToParentProjectCommand}"
