--- a/ListOfDeal/Views/Actions/WaitedActionsView.xaml
+++ b/ListOfDeal/Views/Actions/WaitedActionsView.xaml
@@ -4,6 +4,7 @@
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ListOfDeal"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -62,6 +63,11 @@
             </dxg:GridControl.Columns>
             <dxg:GridControl.View>
                 <dxg:TableView>
+                    <dxg:TableView.FormatConditions>
+                        <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
+                            <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                        </dxg:FormatCondition>
+                    </dxg:TableView.FormatConditions>
                     <dxg:TableView.RowCellMenuCustomizations>
                         <dxb:BarButtonItem Content="Go to project"
                                                        Command="{Binding View.DataContext.GoToParentProjectCommand}"
