--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -16,6 +16,11 @@
         UseLayoutRounding="True"
         Icon="Resources/done_eM5_1.ico"
              >
+    <dx:DXWindow.Resources>
+        <Style TargetType="dxe:ComboBoxEdit">
+            <Setter Property="IsTextEditable" Value="False"/>
+        </Style>
+    </dx:DXWindow.Resources>
     <dxmvvm:Interaction.Behaviors>
         <dxmvvm:EventToCommand EventName="Closing" Command="{Binding SaveChangesCommand}"/>
         <local:ExportToExcelService ScheduledGrid="{Binding Path=Grid, ElementName=ScheduledActionsView}"
