Validate project status

--- a/ListOfDeal/Views/ProjectsView.xaml
+++ b/ListOfDeal/Views/ProjectsView.xaml
@@ -47,6 +47,9 @@
             </dxg:GridColumn>
             <dxg:GridColumn FieldName="DesiredResult"/>
             <dxg:GridColumn FieldName="StatusId" SortIndex="0" SortOrder="Descending" >
+                <dxmvvm:Interaction.Behaviors>
+                    <dxmvvm:EventToCommand EventName="Validate" Command="{Binding ValidateColumnCommand}" PassEventArgsToCommand="True"/>
+                </dxmvvm:Interaction.Behaviors>
                 <dxg:GridColumn.EditSettings>
                     <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" />
                 </dxg:GridColumn.EditSettings>
