--- a/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
+++ b/ListOfDeal/Views/Actions/ScheduledActionsView.xaml
@@ -35,7 +35,7 @@
             </dxg:GridColumn>
         </dxg:GridControl.Columns>
         <dxg:GridControl.View>
-            <dxg:TableView>
+            <dxg:TableView ShowGroupedColumns="True">
                 <dxg:TableView.FormatConditions>
                     <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
                         <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
