--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -3,18 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
              xmlns:local="clr-namespace:ListOfDeal"
+             xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:views="clr-namespace:ListOfDeal.Views"  
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <dxmvvm:ObjectToBooleanConverter x:Key="objToBoolConverter"/>
+        <SolidColorBrush x:Key="{dxgt:GridRowThemeKey ResourceKey=BorderFocusedBrush, IsThemeIndependent=True}"
+                    Color="#00FA9A" />
     </UserControl.Resources>
+    <dxlc:LayoutControl>
     <dxlc:LayoutGroup Orientation="Vertical">
-        <dxlc:LayoutGroup>
+        <dxlc:LayoutGroup x:Name="lGroupExpand" IsCollapsible="True" View="GroupBox" Header="Add project/action"> 
             <dxlc:LayoutGroup Orientation="Vertical" x:Name="ProjectsGroup">
                 <dxmvvm:Interaction.Behaviors>
                     <dxmvvm:EventToCommand EventName="PreviewKeyDown" Command="{Binding PreviewKeyProjectsCommand}" PassEventArgsToCommand="True"/>
@@ -124,10 +130,147 @@
                 </Button>
             </dxlc:LayoutGroup>
         </dxlc:LayoutGroup>
-        <views:ProjectsView x:Name="mainProject">
-            <dxmvvm:Interaction.Behaviors>
-                <local:GridControlManagerService/>
-            </dxmvvm:Interaction.Behaviors>
-        </views:ProjectsView>
-    </dxlc:LayoutGroup>
+                <dxg:GridControl ItemsSource="{Binding Projects}" CurrentItem="{Binding SelectedProject, Mode=TwoWay}" 
+                     Loaded="GridControl_Loaded" x:Name="grid1" 
+                     >
+                <dxmvvm:Interaction.Behaviors>
+                    <local:GridControlManagerService/>
+                    <dxmvvm:EventToCommand EventName="CustomSummary" Command="{Binding CustomSummaryCommand}" PassEventArgsToCommand="True"/>
+                    </dxmvvm:Interaction.Behaviors>
+                    <dxg:GridControl.Columns>
+                        <dxg:GridColumn FieldName="Name" Width="490"/>
+                        <dxg:GridColumn FieldName="DateCreated" AllowEditing="False"/>
+                        <dxg:GridColumn FieldName="TypeId" GroupIndex="0">
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="Comment">
+                            <dxg:GridColumn.CellTemplate>
+                                <DataTemplate>
+                                    <dxe:MemoEdit Name="PART_Editor">
+                                        <dxe:MemoEdit.DisplayTemplate>
+                                            <ControlTemplate>
+                                                <TextBlock Text="{Binding Value}" Margin="3,2,0,0" MaxHeight="20"/>
+                                            </ControlTemplate>
+                                        </dxe:MemoEdit.DisplayTemplate>
+                                    </dxe:MemoEdit>
+                                </DataTemplate>
+                            </dxg:GridColumn.CellTemplate>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="DesiredResult"/>
+                        <dxg:GridColumn FieldName="StatusId">
+                            <dxmvvm:Interaction.Behaviors>
+                                <dxmvvm:EventToCommand EventName="Validate" Command="{Binding ValidateColumnCommand}" PassEventArgsToCommand="True"/>
+                            </dxmvvm:Interaction.Behaviors>
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="IsSimpleProject"/>
+                    </dxg:GridControl.Columns>
+                    <dxg:GridControl.DetailDescriptor>
+                        <dxg:DataControlDetailDescriptor ItemsSourcePath="Actions">
+                            <dxg:GridControl CurrentItem="{Binding SelectedAction,Mode=TwoWay}">
+                                <dxg:GridControl.Columns>
+                                    <dxg:GridColumn FieldName="Name" Width="325"/>
+                                    <dxg:GridColumn FieldName="TriggerId">
+                                        <dxg:GridColumn.EditSettings>
+                                            <dxe:ComboBoxEditSettings ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name"/>
+                                        </dxg:GridColumn.EditSettings>
+                                    </dxg:GridColumn>
+                                    <dxg:GridColumn FieldName="StatusId">
+                                        <dxg:GridColumn.EditSettings>
+                                            <dxe:ComboBoxEditSettings  ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
+                                        </dxg:GridColumn.EditSettings>
+                                    </dxg:GridColumn>
+                                    <dxg:GridColumn FieldName="DateCreated" AllowEditing="False" />
+                                    <dxg:GridColumn FieldName="ScheduledTime">
+                                        <dxg:GridColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <dxe:DateEdit Name="PART_Editor">
+                                                    <dxe:DateEdit.Style>
+                                                        <Style TargetType="{x:Type dxe:DateEdit}">
+                                                            <Setter Property="IsEnabled" Value="False"/>
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding RowData.Row.StatusId}" Value="2">
+                                                                    <Setter Property="IsEnabled" Value="True"/>
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </dxe:DateEdit.Style>
+                                                </dxe:DateEdit>
+                                            </DataTemplate>
+                                        </dxg:GridColumn.CellTemplate>
+                                    </dxg:GridColumn>
+                                    <dxg:GridColumn FieldName="DelegatedTo" >
+                                        <dxg:GridColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <dxe:ComboBoxEdit x:Name="PART_Editor" 
+										ItemsSource="{Binding DataContext.DelegatePersons, RelativeSource={RelativeSource AncestorType={x:Type dxg:DataPresenter}, Mode=FindAncestor}}" 
+										ValueMember="Id" DisplayMember="Name">
+                                                    <dxe:ComboBoxEdit.Style>
+                                                        <Style TargetType="{x:Type dxe:ComboBoxEdit}">
+                                                            <Setter Property="IsEnabled" Value="False"/>
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding RowData.Row.StatusId}" Value="3">
+                                                                    <Setter Property="IsEnabled" Value="True"/>
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </dxe:ComboBoxEdit.Style>
+                                                </dxe:ComboBoxEdit>
+                                            </DataTemplate>
+                                        </dxg:GridColumn.CellTemplate>
+                                    </dxg:GridColumn>
+                                    <dxg:GridColumn FieldName="IsActive" Width="70"/>
+                                    <dxg:GridColumn FieldName="Comment">
+                                        <dxg:GridColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <dxe:MemoEdit Name="PART_Editor">
+                                                    <dxe:MemoEdit.DisplayTemplate>
+                                                        <ControlTemplate>
+                                                            <TextBlock Text="{Binding Value}" Margin="3,2,0,0" MaxHeight="20"/>
+                                                        </ControlTemplate>
+                                                    </dxe:MemoEdit.DisplayTemplate>
+                                                </dxe:MemoEdit>
+                                            </DataTemplate>
+                                        </dxg:GridColumn.CellTemplate>
+                                    </dxg:GridColumn>
+                                    <dxg:GridColumn FieldName="OrderNumber"  Visible="False"/>
+                                </dxg:GridControl.Columns>
+                                <dxg:GridControl.View>
+                                    <dxg:TableView ShowGroupPanel="False" ShowFilterPanelMode="Never">
+                                        <dxg:TableView.FormatConditions>
+                                            <dxg:FormatCondition ApplyToRow="True" FieldName="IsActive" PredefinedFormatName="GreenFillWithDarkGreenText" Expression="[IsActive] = True And [StatusId] &lt;&gt; 4"/>
+                                            <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '4'">
+                                                <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                                            </dxg:FormatCondition>
+                                        </dxg:TableView.FormatConditions>
+                                    </dxg:TableView>
+                                </dxg:GridControl.View>
+                            </dxg:GridControl>
+                        </dxg:DataControlDetailDescriptor>
+                    </dxg:GridControl.DetailDescriptor>
+                    <dxg:GridControl.View>
+                        <dxg:TableView 	ShowGroupedColumns="True" ShowFixedTotalSummary="True" FadeSelectionOnLostFocus="False" ShowFilterPanelMode="Never" >
+                            <dxg:TableView.FormatConditions>
+                                <dxg:FormatCondition ApplyToRow="True" FieldName="StatusId" PredefinedFormatName="GreenFillWithDarkGreenText" Value1="1" ValueRule="Equal"/>
+                                <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '3'">
+                                    <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
+                                </dxg:FormatCondition>
+                            </dxg:TableView.FormatConditions>
+                        </dxg:TableView>
+                    </dxg:GridControl.View>
+                    <dxg:GridControl.TotalSummary>
+                        <dxg:GridSummaryItem SummaryType="Count" FieldName="Name" Alignment="Left"/>
+                        <dxg:GridSummaryItem SummaryType="Custom" FieldName="TypeId" Alignment="Right"/>
+                    </dxg:GridControl.TotalSummary>
+                    <dxg:GridControl.GroupSummary>
+                        <dxg:GridSummaryItem SummaryType="Count"/>
+                    </dxg:GridControl.GroupSummary>
+                </dxg:GridControl>
+
+        </dxlc:LayoutGroup>
+    </dxlc:LayoutControl>
 </UserControl>
