chart - fix label

--- a/ListOfDeal/Views/ChartView.xaml
+++ b/ListOfDeal/Views/ChartView.xaml
@@ -53,7 +53,7 @@
                                                             dxc:XYDiagram2D.SeriesAxisY="{Binding ElementName=secondaryAxisY}" 
                                                           ValueDataMember="CountOut"
                                        ArgumentDataMember="TDate"
-                                       DisplayName="In"
+                                       DisplayName="Out"
                                        DataSource="{Binding AllDayData}"
                                                        LabelsVisibility="True"
                                                        >
