wl viem model+view

--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -54,6 +54,9 @@
             <dx:DXTabItem Header="History">
                 <views:HistoryView/>
             </dx:DXTabItem>
+            <dx:DXTabItem Header="WunderList">
+                <views:WunderListView DataContext="{Binding WLViewModel}"/>
+            </dx:DXTabItem>
         </dx:DXTabControl>
     </Grid>
 </dx:DXWindow>
