--- a/ListOfDeal/Views/EnterNewProjectView.xaml
+++ b/ListOfDeal/Views/EnterNewProjectView.xaml
@@ -39,7 +39,12 @@
                     </dxlc:LayoutGroup>
                     <dxlc:LayoutGroup>
                         <dxlc:LayoutItem Label="Status:">
-                            <dxe:ComboBoxEdit ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" EditValue="{Binding CurrentProject.StatusId}"/>
+                            <!--<dxe:ComboBoxEdit ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" EditValue="{Binding CurrentProject.StatusId}"/>-->
+                            <dxe:ComboBoxEdit EditValue="{Binding CurrentProject.StatusId}">
+                                <dxmvvm:Interaction.Behaviors>
+                                    <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ProjectStatusEnum}"/>
+                                </dxmvvm:Interaction.Behaviors>
+                            </dxe:ComboBoxEdit>
                         </dxlc:LayoutItem>
                         <Button Content="Add project" Command="{Binding AddNewProjectCommand}" Height="20"/>
                         <Button Content="Open actions" Command="{Binding OpenEditProjectCommand}" Height="20"/>
@@ -128,9 +133,15 @@
                         <dxmvvm:Interaction.Behaviors>
                             <dxmvvm:EventToCommand EventName="Validate" Command="{Binding ValidateColumnCommand}" PassEventArgsToCommand="True"/>
                         </dxmvvm:Interaction.Behaviors>
-                        <dxg:GridColumn.EditSettings>
-                            <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" />
-                        </dxg:GridColumn.EditSettings>
+                        <dxg:GridColumn.CellTemplate>
+                            <DataTemplate>
+                                <dxe:ComboBoxEdit Name="PART_Editor">
+                                    <dxmvvm:Interaction.Behaviors>
+                                        <dxmvvm:EnumItemsSourceBehavior EnumType="{x:Type local:ProjectStatusEnum}"/>
+                                    </dxmvvm:Interaction.Behaviors>
+                                </dxe:ComboBoxEdit>
+                            </DataTemplate>
+                        </dxg:GridColumn.CellTemplate>
                     </dxg:GridColumn>
                     <dxg:GridColumn FieldName="IsSimpleProject"/>
                 </dxg:GridControl.Columns>
@@ -220,8 +231,12 @@
                 <dxg:GridControl.View>
                     <dxg:TableView 	ShowGroupedColumns="True" ShowGroupPanel="False" ShowFixedTotalSummary="True" FadeSelectionOnLostFocus="False" ShowFilterPanelMode="Never" >
                         <dxg:TableView.FormatConditions>
-                            <dxg:FormatCondition ApplyToRow="True" FieldName="StatusId" PredefinedFormatName="GreenFillWithDarkGreenText" Value1="1" ValueRule="Equal"/>
-                            <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" ApplyToRow="True" Expression="[StatusId] = '3'">
+                            <dxg:FormatCondition ApplyToRow="True" 
+                                                 PredefinedFormatName="GreenFillWithDarkGreenText"
+                                                 Expression="[StatusId]='InWork'"
+                                                 />
+                            <dxg:FormatCondition FieldName="StatusId" Value1="{x:Null}" ValueRule="Expression" 
+                                                 ApplyToRow="True" Expression="[StatusId] = 'Done'">
                                 <dx:Format Foreground="#FFD8D6CB" TextDecorations="{x:Null}"/>
                             </dxg:FormatCondition>
                         </dxg:TableView.FormatConditions>
